# OPE2023

./: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
Commons/: Math.hpp  Utility.hpp  Vector2.cpp  Vector2.hpp
Components/: BoxColliderComponent.cpp  BoxColliderComponent.hpp  Component.cpp  Component.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TextComponent.cpp  TextComponent.hpp
GameObjects/: Bullet.cpp  Bullet.hpp  Enemy.cpp  Enemy.hpp  GameObject.cpp  GameObject.hpp  Player.cpp  Player.hpp  TextObject.cpp  TextObject.hpp
Scenes/: GameScene.cpp  GameScene.hpp  Scene.cpp  Scene.hpp  TitleScene.cpp  TitleScene.hpp
